--- a/package.json
+++ b/package.json
@@ -39,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "customize-cra": "^1.0.0",
+    "node-sass": "^9.0.0",
+    "sass-loader": "^16.0.3"
   }
 }
