feat: 配置scsss和scss模块,配置全局声明文件引入

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,11 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
-, "globals.d.ts"  ]
+    "src",
+    // "globals.d.ts",
+    "./**/*.ts"
+  ],
+  "exclude": [
+    "nodee_modules/**/*"
+  ]
 }
