--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "eject": "react-app-rewired eject",
+    "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx}\"",
+    "format": "prettier --write \"src/**/*.+(js|ts|jsx|tsx)\""
   },
   "eslintConfig": {
     "extends": [
@@ -41,9 +43,17 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.16.0",
     "customize-cra": "^1.0.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.13.0",
     "node-sass": "^9.0.0",
+    "prettier": "^3.4.1",
     "react-app-rewired": "^2.2.1",
-    "sass-loader": "^16.0.3"
+    "sass-loader": "^16.0.3",
+    "typescript-eslint": "^8.16.0"
   }
 }
