--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
-    "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx}\"",
+    "lint": "eslint \"./src/**/*.{js,jsx,ts,tsx}\"",
+    "lint:fix": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx}\"",
     "format": "prettier --write \"src/**/*.+(js|ts|jsx|tsx)\"",
     "prepare": "husky install",
     "commitlint": "commitlint --config commitlint.config.js -e -V || (node scripts/pre-commit.js&&exit 8)"
@@ -35,7 +36,10 @@
     ]
   },
   "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": "npm run lint",
+    "**/*.{js,jsx,ts,tsx}": [
+      "npm run lint:fix",
+      "npm run format"
+    ],
     "**/*.{js,jsx,tsx,ts,scss,md,json}": [
       "prettier --write",
       "eslint --fix"
