--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/react-dom": "^18.3.1",
     "antd": "^5.22.2",
     "chalk": "^4.1.2",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
