✨ feat: reactreact脚手架默认支持scss,不支持less

--- a/package.json
+++ b/package.json
@@ -46,9 +46,8 @@
       "npm run lint:fix",
       "npm run format"
     ],
-    "**/*.{js,jsx,tsx,ts,scss,md,json}": [
-      "prettier --write",
-      "eslint --fix"
+    "**/*.{scss,less,md,json}": [
+      "prettier --write"
     ]
   },
   "browserslist": {
