--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.22.2",
     "chalk": "^4.1.2",
     "dayjs": "^1.11.13",
+    "less-loader": "^12.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
