--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "antd": "^5.22.2",
+    "axios": "^1.7.9",
     "chalk": "^4.1.2",
     "dayjs": "^1.11.13",
+    "express": "^4.21.2",
     "less-loader": "^12.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
