--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "chalk": "^4.1.2",
     "dayjs": "^1.11.13",
     "express": "^4.21.2",
+    "i18next": "^22.5.1",
     "less-loader": "^12.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
