--- a/package.json
+++ b/package.json
@@ -73,10 +73,13 @@
     "globals": "^15.13.0",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.10",
+    "mini-css-extract-plugin": "^2.9.2",
     "node-sass": "^9.0.0",
     "prettier": "^3.4.1",
+    "progress-bar-webpack-plugin": "^2.1.0",
     "react-app-rewired": "^2.2.1",
     "sass-loader": "^16.0.3",
-    "typescript-eslint": "^8.16.0"
+    "typescript-eslint": "^8.16.0",
+    "webpackbar": "^7.0.0"
   }
 }
